src/snapshots/skate__ast_tests__functions-11.snap
---
source: src/ast_tests.rs
expression: f

---
name:
  node: c
  span:
    - 3
    - 4
args:
  node: []
  span:
    - 4
    - 6
ret: ~
body:
  node:
    - Let:
        - node: x
          span:
            - 11
            - 12
        - node:
            Var:
              node: y
              span:
                - 15
                - 16
          span:
            - 15
            - 16
  span:
    - 6
    - 17

