src/snapshots/skate__ast_tests__functions-12.snap
---
source: src/ast_tests.rs
expression: f

---
name:
  node: d
  span:
    start: 3
    end: 4
    file_id: 100
args:
  node: []
  span:
    start: 4
    end: 6
    file_id: 100
ret: ~
body:
  node:
    - Let:
        - node: x
          span:
            start: 12
            end: 13
            file_id: 100
        - node:
            Block:
              node:
                - Expr:
                    node:
                      Var:
                        node: y
                        span:
                          start: 17
                          end: 18
                          file_id: 100
                    span:
                      start: 17
                      end: 18
                      file_id: 100
              span:
                start: 16
                end: 19
                file_id: 100
          span:
            start: 16
            end: 19
            file_id: 100
  span:
    start: 6
    end: 21
    file_id: 100

