src/snapshots/skate__ast_tests__functions-14.snap
---
source: src/ast_tests.rs
expression: f

---
name:
  node: f
  span:
    - 3
    - 4
args:
  node: []
  span:
    - 4
    - 6
ret: ~
body:
  node:
    - Expr:
        node:
          Block:
            node:
              - Let:
                  - node: a
                    span:
                      - 13
                      - 14
                  - node:
                      Var:
                        node: b
                        span:
                          - 17
                          - 18
                    span:
                      - 17
                      - 18
              - Let:
                  - node: c
                    span:
                      - 24
                      - 25
                  - node:
                      Block:
                        node:
                          - Expr:
                              node:
                                Var:
                                  node: d
                                  span:
                                    - 29
                                    - 30
                              span:
                                - 29
                                - 30
                          - Expr:
                              node:
                                Var:
                                  node: e
                                  span:
                                    - 31
                                    - 32
                              span:
                                - 31
                                - 32
                        span:
                          - 28
                          - 33
                    span:
                      - 28
                      - 33
            span:
              - 8
              - 34
        span:
          - 8
          - 34
    - Expr:
        node:
          Var:
            node: f
            span:
              - 36
              - 37
        span:
          - 36
          - 37
  span:
    - 6
    - 38

