src/snapshots/skate__ast_tests__functions-15.snap
---
source: src/ast_tests.rs
expression: f

---
name: main
args: []
ret: ~
body:
  - If:
      - Var: x
      - - Expr:
            Var: y
      - ~

