src/snapshots/skate__ast_tests__functions-17.snap
---
source: src/ast_tests.rs
expression: f

---
- Function:
    node:
      name:
        node: main
        span:
          start: 3
          end: 7
          file_id: 100
      args:
        node: []
        span:
          start: 7
          end: 9
          file_id: 100
      ret: ~
      body:
        node:
          - Print:
              node:
                Var:
                  node: a
                  span:
                    start: 30
                    end: 31
                    file_id: 100
              span:
                start: 30
                end: 31
                file_id: 100
          - Print:
              node:
                Var:
                  node: b
                  span:
                    start: 51
                    end: 52
                    file_id: 100
              span:
                start: 51
                end: 52
                file_id: 100
          - Print:
              node:
                Var:
                  node: xxxxxx
                  span:
                    start: 72
                    end: 78
                    file_id: 100
              span:
                start: 72
                end: 78
                file_id: 100
        span:
          start: 10
          end: 92
          file_id: 100
    span:
      start: 0
      end: 92
      file_id: 100

