src/snapshots/skate__ast_tests__functions-18.snap
---
source: src/ast_tests.rs
expression: f

---
name:
  node: main
  span:
    - 3
    - 7
args:
  node: []
  span:
    - 7
    - 9
ret: ~
body:
  node:
    - Expr:
        For:
          - i
          - Var: z
          - - Print:
                Var: z
            - Print:
                Var: i
            - Let:
                - i
                - Block:
                    - Expr:
                        If:
                          - Var: a
                          - - Expr:
                                Var: d
                          - ~
                    - Expr:
                        If:
                          - Var: c
                          - - Expr:
                                Var: e
                          - - Expr:
                                If:
                                  - Var: f
                                  - - Expr:
                                        Var: g
                                  - ~
  span:
    - 10
    - 231

