src/snapshots/skate__ast_tests__functions-19.snap
---
source: src/ast_tests.rs
expression: f

---
- Function:
    node:
      name:
        node: main
        span:
          start: 3
          end: 7
          file_id: 100
      args:
        node: []
        span:
          start: 7
          end: 9
          file_id: 100
      ret: ~
      body:
        node:
          - Let:
              - node: z
                span:
                  start: 16
                  end: 17
                  file_id: 100
              - node:
                  FieldAccess:
                    - node:
                        Var:
                          node: a
                          span:
                            start: 20
                            end: 21
                            file_id: 100
                      span:
                        start: 20
                        end: 21
                        file_id: 100
                    - node: b
                      span:
                        start: 22
                        end: 23
                        file_id: 100
                span:
                  start: 20
                  end: 23
                  file_id: 100
        span:
          start: 10
          end: 25
          file_id: 100
    span:
      start: 0
      end: 25
      file_id: 100

