src/snapshots/skate__ast_tests__functions-2.snap
---
source: src/ast_tests.rs
expression: f

---
name:
  node: bar
  span:
    - 3
    - 6
args:
  node:
    - name:
        node: x
        span:
          - 7
          - 8
      ty:
        node: Int
        span:
          - 9
          - 12
  span:
    - 6
    - 13
ret: ~
body:
  node: []
  span:
    - 13
    - 15

