src/snapshots/skate__ast_tests__functions-20.snap
---
source: src/ast_tests.rs
expression: f

---
name:
  node: main
  span:
    start: 3
    end: 7
    file_id: 100
args:
  node: []
  span:
    start: 7
    end: 9
    file_id: 100
ret: ~
body:
  node:
    - Let:
        - node: z
          span:
            start: 15
            end: 16
            file_id: 100
        - node:
            FieldAccess:
              - node:
                  FieldAccess:
                    - node:
                        Var:
                          node: a
                          span:
                            start: 19
                            end: 20
                            file_id: 100
                      span:
                        start: 19
                        end: 20
                        file_id: 100
                    - node: b
                      span:
                        start: 21
                        end: 22
                        file_id: 100
                span:
                  start: 19
                  end: 22
                  file_id: 100
              - node: c
                span:
                  start: 23
                  end: 24
                  file_id: 100
          span:
            start: 19
            end: 24
            file_id: 100
  span:
    start: 10
    end: 26
    file_id: 100

