src/snapshots/skate__ast_tests__functions-21.snap
---
source: src/ast_tests.rs
expression: f

---
name:
  node: main
  span:
    - 3
    - 7
args:
  node: []
  span:
    - 7
    - 9
ret: ~
body:
  node:
    - Let:
        - node: z
          span:
            - 16
            - 17
        - node:
            Call:
              - node:
                  FieldAccess:
                    - node:
                        ArrayAccess:
                          - node:
                              FieldAccess:
                                - node:
                                    FieldAccess:
                                      - node:
                                          Var:
                                            node: x
                                            span:
                                              - 20
                                              - 21
                                        span:
                                          - 20
                                          - 21
                                      - node: y
                                        span:
                                          - 22
                                          - 23
                                  span:
                                    - 20
                                    - 23
                                - node: z
                                  span:
                                    - 24
                                    - 25
                            span:
                              - 20
                              - 25
                          - node:
                              FieldAccess:
                                - node:
                                    ArrayAccess:
                                      - node:
                                          FieldAccess:
                                            - node:
                                                Var:
                                                  node: a
                                                  span:
                                                    - 26
                                                    - 27
                                              span:
                                                - 26
                                                - 27
                                            - node: b
                                              span:
                                                - 28
                                                - 29
                                        span:
                                          - 26
                                          - 29
                                      - node:
                                          Var:
                                            node: z
                                            span:
                                              - 30
                                              - 31
                                        span:
                                          - 30
                                          - 31
                                  span:
                                    - 26
                                    - 32
                                - node: c
                                  span:
                                    - 33
                                    - 34
                            span:
                              - 26
                              - 34
                      span:
                        - 20
                        - 35
                    - node: d
                      span:
                        - 36
                        - 37
                span:
                  - 20
                  - 37
              - - node:
                    Var:
                      node: e
                      span:
                        - 38
                        - 39
                  span:
                    - 38
                    - 39
                - node:
                    Var:
                      node: f
                      span:
                        - 40
                        - 41
                  span:
                    - 40
                    - 41
                - node:
                    Var:
                      node: g
                      span:
                        - 42
                        - 43
                  span:
                    - 42
                    - 43
          span:
            - 20
            - 44
  span:
    - 10
    - 46

