src/snapshots/skate__ast_tests__functions-3.snap
---
source: src/ast_tests.rs
expression: f

---
- Function:
    node:
      name:
        node: foo
        span:
          start: 3
          end: 6
          file_id: 100
      args:
        node:
          - name:
              node: y
              span:
                start: 7
                end: 8
                file_id: 100
            ty:
              node: Int
              span:
                start: 9
                end: 12
                file_id: 100
        span:
          start: 6
          end: 14
          file_id: 100
      ret: ~
      body:
        node: []
        span:
          start: 14
          end: 16
          file_id: 100
    span:
      start: 0
      end: 16
      file_id: 100

